--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
