--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.7",
+    "nanoid": "3.3.4",
     "yup": "^1.4.0"
   }
 }
