--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.0",
+    "@types/uuid": "^10.0.0",
     "faker": "^6.6.6",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
@@ -35,7 +37,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "3.3.4",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   }
 }
